--- a/src/components/Profile.css
+++ b/src/components/Profile.css
@@ -72,7 +72,7 @@
 .stats li{
     width: 150px;
     height: 130px;
-    background: #F3F6F9;
+    background-color: #F3F6F9;
     display: flex;
     flex-direction: column;
     align-items: center;
