--- a/src/components/Profile.css
+++ b/src/components/Profile.css
@@ -1,11 +1,11 @@
 .profile{
-    margin: 0 auto;
+    margin: 30px auto;
     width: 450px;
     background-color: #FFFFFF;
     border: 1px solid #DAE2EB;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 10px;
-    padding-top: 50px;
+    padding-top: 40px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -24,7 +24,7 @@
 }
 
 .name{
-    margin: 26px 0 0;
+    margin: 30px 0 0;
     font-family: 'Inter';
     font-style: normal;
     font-weight: 700;
@@ -46,7 +46,7 @@
 }
 
 .location{
-    margin: 10px 0 49px;
+    margin: 10px 0 30px;
     font-family: 'Inter';
     font-style: normal;
     font-weight: 400;
@@ -113,4 +113,39 @@
     line-height: 27px;
     text-align: center;
     color: #3A4453;
+}
+
+@media screen and (max-width: 460px){
+    .profile{
+        width: 300px;
+        margin: 20px auto;
+        padding-top: 30px;
+    }
+
+    .name{
+        margin: 20px 0 0;
+        font-size: 28px;
+    }
+    
+    .tag{
+        margin: 10px 0 0;
+        font-size: 22px;
+    }
+    
+    .location{
+        margin: 10px 0 20px;
+        font-size: 22px;
+    }
+
+    .stats{
+        width: 300px;
+    }
+
+    .label{
+        font-size: 18px;
+    }
+    
+    .quantity{
+        font-size: 18px;
+    }
 }
